components/c12/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: c12
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: c12 
  name: c12
  namespace: zdemo-ns
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: c12
