components/c12/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: c12
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: c12 
  name: c12
  namespace: zdemo-ns
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: c12
    weight: 100
